# scman

./: .gitignore  Cargo.toml  README.md  notes.txt
src/: main.rs  mouse_click_handle.rs  scroll_handle.rs
