[package]
name = "scman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rdev = { path = "crates/rdev", version = "0.5", features = ["unstable_grab"] }
# rdev = { git = "https://github.com/thrombe/rdev", version = "0.5", features = ["unstable_grab"] }
rdev = { version = "0.5", features = ["unstable_grab"] }
serde = { version = "1.0.136", features = ["derive"] }

[features]
# default = ["custom_rdev"]

custom_rdev = []
